fix：fixed some routing jumps and style issues in the English version

--- a/template/en/bootstrap/css/bootstrap.css
+++ b/template/en/bootstrap/css/bootstrap.css
@@ -6122,7 +6122,8 @@ a.close.disabled {
 
 @media (min-width: 1200px) {
   .modal-xl {
-    max-width: 1140px;
+    /* max-width: 1140px; */
+    max-width: 1200px;
   }
 }
 
